--- a/docs/document/LEVEL 3 ADVANCED/Fase 8 Dependency Injection/8.6 KSP Kotlin Symbol Processing.md
+++ b/docs/document/LEVEL 3 ADVANCED/Fase 8 Dependency Injection/8.6 KSP Kotlin Symbol Processing.md
@@ -1,27 +1,338 @@
-# KSP (Kotlin Symbol Processing)
+## **8.6 KSP (Kotlin Symbol Processing)** (3 hari) ⭐⭐
 
-## Deskripsi
-Kotlin Symbol Processing (KSP) adalah framework untuk code generation yang lebih cepat dan efisien dibanding Annotation Processing. Anda akan belajar bagaimana menggunakannya untuk generasi kode.
-
-## Tujuan Pembelajaran
-- Memahami konsep KSP
-- Menggunakan KSP untuk code generation
-- Membandingkan dengan Annotation Processing
-
-## Materi
-- Konsep Kotlin Symbol Processing
-- Perbedaan KSP dan Annotation Processing
-- Setup KSP dalam proyek
-- Performance benefits dari KSP
+### **Teknologi Modern:**
+- Kotlin Symbol Processing
 - KSP for code generation
-- Modern code generation approach
-- Integration dengan Hilt dan library lain
+- Faster build times
+- Better error messages
 
-## Waktu
-3 hari
+### **Teknologi yang Ditinggalkan:**
+- Annotation Processing (kapt)
+- Slow build times
+- Java-based annotation processing
 
-## Prioritas
-⭐⭐ (Modern code generation)
+### **Sub-topik Detail:**
 
-## Catatan
-KSP adalah pendekatan modern untuk code generation yang lebih cepat dari Annotation Processing.
+#### **1. KSP vs KAPT**
+
+**Performance Comparison:**
+```
+Build Time Comparison:
+├── KAPT: ~45 seconds
+└── KSP: ~15 seconds (3x faster!)
+
+Memory Usage:
+├── KAPT: Higher memory consumption
+└── KSP: Lower memory footprint
+
+Error Messages:
+├── KAPT: Less clear
+└── KSP: More helpful
+```
+
+#### **2. Setup KSP**
+
+**Project Configuration:**
+```kotlin
+// Project build.gradle
+plugins {
+    id("com.google.devtools.ksp") version "1.9.20-1.0.14" apply false
+}
+
+// App build.gradle
+plugins {
+    id("com.google.devtools.ksp")
+}
+
+dependencies {
+    // Hilt with KSP
+    implementation("com.google.dagger:hilt-android:2.48")
+    ksp("com.google.dagger:hilt-android-compiler:2.48")
+    
+    // Room with KSP
+    implementation("androidx.room:room-runtime:2.6.0")
+    ksp("androidx.room:room-compiler:2.6.0")
+    
+    // Moshi with KSP
+    implementation("com.squareup.moshi:moshi:1.15.0")
+    ksp("com.squareup.moshi:moshi-kotlin-codegen:1.15.0")
+}
+
+// Migrate from KAPT
+android {
+    // Remove kapt configuration
+}
+```
+
+**Gradle Properties:**
+```properties
+# gradle.properties
+ksp.incremental=true
+ksp.incremental.log=true
+```
+
+#### **3. Migration from KAPT**
+
+**Before (KAPT):**
+```kotlin
+plugins {
+    id("kotlin-kapt")
+}
+
+dependencies {
+    implementation("com.google.dagger:hilt-android:2.48")
+    kapt("com.google.dagger:hilt-android-compiler:2.48")
+    
+    implementation("androidx.room:room-runtime:2.6.0")
+    kapt("androidx.room:room-compiler:2.6.0")
+}
+
+kapt {
+    correctErrorTypes = true
+}
+```
+
+**After (KSP):**
+```kotlin
+plugins {
+    id("com.google.devtools.ksp")
+}
+
+dependencies {
+    implementation("com.google.dagger:hilt-android:2.48")
+    ksp("com.google.dagger:hilt-android-compiler:2.48")
+    
+    implementation("androidx.room:room-runtime:2.6.0")
+    ksp("androidx.room:room-compiler:2.6.0")
+}
+```
+
+#### **4. Hilt with KSP**
+
+**No Code Changes Needed:**
+```kotlin
+// Same code, faster compilation!
+@HiltAndroidApp
+class MyApp : Application()
+
+@AndroidEntryPoint
+class MainActivity : AppCompatActivity()
+
+@HiltViewModel
+class UserViewModel @Inject constructor(
+    private val repository: UserRepository
+) : ViewModel()
+
+@Module
+@InstallIn(SingletonComponent::class)
+object NetworkModule {
+    @Provides
+    @Singleton
+    fun provideRetrofit(): Retrofit {
+        return Retrofit.Builder()
+            .baseUrl("https://api.example.com/")
+            .build()
+    }
+}
+```
+
+#### **5. Room with KSP**
+
+**Database:**
+```kotlin
+@Database(entities = [User::class], version = 1)
+abstract class AppDatabase : RoomDatabase() {
+    abstract fun userDao(): UserDao
+}
+
+@Entity(tableName = "users")
+data class User(
+    @PrimaryKey val id: String,
+    val name: String,
+    val email: String
+)
+
+@Dao
+interface UserDao {
+    @Query("SELECT * FROM users WHERE id = :id")
+    suspend fun getUser(id: String): User?
+    
+    @Insert(onConflict = OnConflictStrategy.REPLACE)
+    suspend fun insert(user: User)
+    
+    @Delete
+    suspend fun delete(user: User)
+}
+```
+
+#### **6. Moshi with KSP**
+
+**JSON Parsing:**
+```kotlin
+@JsonClass(generateAdapter = true)
+data class ApiResponse(
+    val status: String,
+    val data: List<User>,
+    @Json(name = "total_count") val totalCount: Int
+)
+
+@JsonClass(generateAdapter = true)
+data class User(
+    val id: String,
+    val name: String,
+    val email: String,
+    @Json(name = "created_at") val createdAt: String
+)
+
+// Setup
+val moshi = Moshi.Builder()
+    .build()
+
+val adapter = moshi.adapter(ApiResponse::class.java)
+val response = adapter.fromJson(jsonString)
+```
+
+#### **7. Custom KSP Processor**
+
+**Simple Processor:**
+```kotlin
+// processor/build.gradle
+dependencies {
+    implementation("com.google.devtools.ksp:symbol-processing-api:1.9.20-1.0.14")
+}
+
+// Processor class
+class MyProcessor(
+    private val codeGenerator: CodeGenerator,
+    private val logger: KSPLogger
+) : SymbolProcessor {
+    
+    override fun process(resolver: Resolver): List<KSAnnotated> {
+        val symbols = resolver.getSymbolsWithAnnotation("com.example.MyAnnotation")
+        
+        symbols.forEach { symbol ->
+            if (symbol is KSClassDeclaration) {
+                generateCode(symbol)
+            }
+        }
+        
+        return emptyList()
+    }
+    
+    private fun generateCode(classDeclaration: KSClassDeclaration) {
+        val packageName = classDeclaration.packageName.asString()
+        val className = "${classDeclaration.simpleName.asString()}Generated"
+        
+        val file = codeGenerator.createNewFile(
+            Dependencies(false, classDeclaration.containingFile!!),
+            packageName,
+            className
+        )
+        
+        file.write("""
+            package $packageName
+            
+            class $className {
+                fun generated() = "Generated code!"
+            }
+        """.trimIndent().toByteArray())
+        
+        file.close()
+    }
+}
+```
+
+#### **8. Troubleshooting KSP**
+
+**Common Issues:**
+```kotlin
+// Issue 1: Generated files not found
+// Solution: Clean and rebuild
+./gradlew clean build
+
+// Issue 2: Incremental compilation issues
+// Solution: Disable incremental in gradle.properties
+ksp.incremental=false
+
+// Issue 3: IDE not recognizing generated code
+// Solution: Sync Gradle and invalidate caches
+File -> Invalidate Caches / Restart
+```
+
+**Build Configuration:**
+```kotlin
+android {
+    // Make generated sources visible to IDE
+    sourceSets {
+        getByName("main") {
+            java.srcDirs("build/generated/ksp/main/kotlin")
+        }
+    }
+}
+```
+
+#### **9. Best Practices**
+✅ Migrate from KAPT to KSP for faster builds
+✅ Enable incremental processing
+✅ Use KSP with Hilt, Room, Moshi
+✅ Clean build after migration
+✅ Monitor build performance
+✅ Keep KSP version aligned with Kotlin version
+✅ Report issues to library maintainers
+✅ Test thoroughly after migration
+
+---
+
+## **Hands-on Project: News/Weather App dengan Hilt DI**
+
+### **Requirements:**
+
+1. **Setup:**
+   - Hilt setup dengan KSP
+   - Module organization
+   - Proper scoping
+
+2. **Architecture Layers:**
+   ```
+   app/
+   ├── di/
+   │   ├── NetworkModule
+   │   ├── DatabaseModule
+   │   ├── RepositoryModule
+   │   └── DispatcherModule
+   ├── data/
+   │   ├── remote/
+   │   ├── local/
+   │   └── repository/
+   ├── domain/
+   │   ├── model/
+   │   └── usecase/
+   └── ui/
+       ├── screen/
+       └── viewmodel/
+   ```
+
+3. **Dependencies to Inject:**
+   - Retrofit/OkHttp
+   - Room Database
+   - Repositories
+   - ViewModels
+   - Coroutine Dispatchers
+   - SharedPreferences
+   - Analytics
+
+4. **Testing:**
+   - Unit tests dengan Hilt
+   - Fake implementations
+   - Test modules
+   - ViewModel tests
+
+5. **Features:**
+   - Fetch news/weather from API
+   - Cache in Room database
+   - Display in UI
+   - Error handling
+   - Loading states
+   - Offline support
+
+---
